Fix overlapping text portfolio headers

--- a/src/Styles/Portfolio.css
+++ b/src/Styles/Portfolio.css
@@ -22,6 +22,10 @@
     text-align: center;
 }
 
+.piece-title {
+  font-size: 19px;
+}
+
 .category-bts {
     display: flex;
     justify-content: right;
